--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
     compile 'com.google.android.exoplayer:exoplayer:r2.3.1'
 
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+
     compile project(path: ':liveVideoBroadcasterSDK')
     testCompile 'junit:junit:4.12'
 }
