--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="io.antmedia.android.Broadcast.BroadcastActivity"></activity>
-        <activity android:name="io.antmedia.android.MainActivity">
+        <activity android:name="io.antmedia.android.Play.PlayActivity"></activity>
+        <activity android:name="io.antmedia.android.Dashboard.DashboardAcitivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="io.antmedia.android.Broadcast.BroadcastActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/AppThemeDark"></activity>
+        <activity android:name="io.antmedia.android.MainActivity"></activity>
         <activity
             android:name=".LiveVideoBroadcasterActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
